--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,8 @@
   <title>Behavior3JS Editor</title>
 
   <script src="assets/js/preloadjs-0.6.0.min.js" type="text/javascript"></script>
-  <link href="assets/css/normalize-3.0.1.min.css" rel="stylesheet">
-  <link href="assets/css/preload.css" rel="stylesheet">
-  
   <script src="assets/js/angular-1.3.13.min.js" type="text/javascript"></script>
-  <script src="app/app.js" type="text/javascript"></script>
-  <script src="app/common/sidebar/sidebar.js" type="text/javascript"></script>
-  <script src="app/common/tabs/tabs.js" type="text/javascript"></script>
-  <script src="app/common/modal/modal.js" type="text/javascript"></script>
-  <script src="app/common/notification/notification.js" type="text/javascript"></script>
-  <script src="app/common/scrollable/scrollable.js" type="text/javascript"></script>
-  <script src="app/menu/menu.js" type="text/javascript"></script>
-  <script src="app/node/node.js" type="text/javascript"></script>
-  <script src="app/node/directives.js" type="text/javascript"></script>
-  <script src="app/tree/tree.js" type="text/javascript"></script>
-  <script src="app/tree/directives.js" type="text/javascript"></script>
-  <script src="app/property/property.js" type="text/javascript"></script>
-
+  <script src="app/build.js" type="text/javascript"></script>
 
   <script type="text/javascript">
     var MANIFEST = [
