--- a/src/dev.html
+++ b/src/dev.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Behavior3JS Editor</title>
 
-  <script src="assets/libs/preloadjs-0.6.0.min.js" type="text/javascript"></script>
+  <script src="assets/js/preloadjs-0.6.0.min.js" type="text/javascript"></script>
   <link href="assets/css/normalize-3.0.1.min.css" rel="stylesheet">
   <link href="assets/css/preload.css" rel="stylesheet">
   
 
-  <script src="assets/libs/angular-1.3.13.min.js" type="text/javascript"></script>
+  <script src="assets/js/angular-1.3.13.min.js" type="text/javascript"></script>
   <script src="app/app.js" type="text/javascript"></script>
   <script src="app/common/sidebar/sidebar.js" type="text/javascript"></script>
   <script src="app/common/tabs/tabs.js" type="text/javascript"></script>
@@ -31,7 +31,7 @@
       {id:'', src:'assets/libs/easeljs-0.8.0.min.js'},
       {id:'', src:'assets/libs/creatine-0.2.0.min.js'},
       {id:'', src:'assets/libs/keymaster-1.6.3.min.js'},
-      {id:'', src:'assets/libs/behavior3-0.2.0dev.min.js'},
+      {id:'', src:'assets/libs/b3bare.js'},
 
       // IMG
       {id:'', src:'assets/img/closedhand.cur'},
@@ -48,6 +48,9 @@
       {id:'', src:'editor/utils/functions.js'},
       {id:'', src:'editor/utils/SettingsManager.js'},
       {id:'', src:'editor/utils/Root.js'},
+      {id:'', src:'editor/utils/Composite.js'},
+      {id:'', src:'editor/utils/Action.js'},
+      {id:'', src:'editor/utils/Decorator.js'},
       {id:'', src:'editor/utils/Organizer.js'},
       {id:'', src:'editor/utils/StorageProxy.js'},
       {id:'', src:'editor/utils/storage/LocalStorage.js'},
