--- a/src/dev.html
+++ b/src/dev.html
@@ -17,6 +17,7 @@
   <script src="app/common/notification/notification.js" type="text/javascript"></script>
   <script src="app/common/scrollable/scrollable.js" type="text/javascript"></script>
   <script src="app/import/import.js" type="text/javascript"></script>
+  <script src="app/export/export.js" type="text/javascript"></script>
   <script src="app/menu/menu.js" type="text/javascript"></script>
   <script src="app/node/node.js" type="text/javascript"></script>
   <script src="app/node/directives.js" type="text/javascript"></script>
