Add module node type, fix build

--- a/src/dev.html
+++ b/src/dev.html
@@ -52,6 +52,7 @@
       {id:'', src:'editor/utils/Root.js'},
       {id:'', src:'editor/utils/Composite.js'},
       {id:'', src:'editor/utils/Action.js'},
+      {id:'', src:'editor/utils/Module.js'},
       {id:'', src:'editor/utils/Decorator.js'},
       {id:'', src:'editor/utils/Organizer.js'},
       {id:'', src:'editor/utils/StorageProxy.js'},
