--- a/src/dev.html
+++ b/src/dev.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <title>Behavior3JS Editor</title>
 
-  <script src="assets/js/preloadjs-0.6.0.min.js" type="text/javascript"></script>
   <link href="assets/css/normalize-3.0.1.min.css" rel="stylesheet">
-  <link href="assets/css/preload.css" rel="stylesheet">
-  
 
   <script src="assets/js/angular-1.3.13.min.js" type="text/javascript"></script>
+
+  <script src="assets/libs/opensans-0.1.0.js" type="text/javascript"></script>
+  <script src="assets/libs/easeljs-0.8.0.min.js" type="text/javascript"></script>
+  <script src="assets/libs/creatine-0.2.0.min.js" type="text/javascript"></script>
+  <script src="assets/libs/keymaster-1.6.3.min.js" type="text/javascript"></script>
+  <script src="assets/libs/b3bare.js" type="text/javascript"></script>
+
   <script src="app/app.js" type="text/javascript"></script>
   <script src="app/common/sidebar/sidebar.js" type="text/javascript"></script>
   <script src="app/common/tabs/tabs.js" type="text/javascript"></script>
@@ -25,68 +29,38 @@
   <script src="app/tree/directives.js" type="text/javascript"></script>
   <script src="app/property/property.js" type="text/javascript"></script>
 
+  <script src="editor/data/options.js" type="text/javascript"></script>
+  <script src="editor/data/shortcuts.js" type="text/javascript"></script>
+  <script src="editor/data/theme_dark.js" type="text/javascript"></script>
+  <script src="editor/editor.js" type="text/javascript"></script>
+  <script src="editor/game.js" type="text/javascript"></script>
+  <script src="editor/utils/functions.js" type="text/javascript"></script>
+  <script src="editor/utils/SettingsManager.js" type="text/javascript"></script>
+  <script src="editor/utils/Root.js" type="text/javascript"></script>
+  <script src="editor/utils/Composite.js" type="text/javascript"></script>
+  <script src="editor/utils/Action.js" type="text/javascript"></script>
+  <script src="editor/utils/Module.js" type="text/javascript"></script>
+  <script src="editor/utils/Decorator.js" type="text/javascript"></script>
+  <script src="editor/utils/Organizer.js" type="text/javascript"></script>
+  <script src="editor/utils/StorageProxy.js" type="text/javascript"></script>
+  <script src="editor/utils/storage/LocalStorage.js" type="text/javascript"></script>
+  <script src="editor/draw/shapes.js" type="text/javascript"></script>
+  <script src="editor/draw/symbols.js" type="text/javascript"></script>
+  <script src="editor/models/Project.js" type="text/javascript"></script>
+  <script src="editor/models/Tree.js" type="text/javascript"></script>
+  <script src="editor/models/Node.js" type="text/javascript"></script>
+  <script src="editor/entities/Block.js" type="text/javascript"></script>
+  <script src="editor/entities/Connection.js" type="text/javascript"></script>
+  <script src="editor/entities/SelectionBox.js" type="text/javascript"></script>
+  <script src="editor/systems/CameraSystem.js" type="text/javascript"></script>
+  <script src="editor/systems/ConnectionSystem.js" type="text/javascript"></script>
+  <script src="editor/systems/DragSystem.js" type="text/javascript"></script>
+  <script src="editor/systems/SelectionSystem.js" type="text/javascript"></script>
 
-  <script type="text/javascript">
-    var MANIFEST = [
-      // SCRIPT
-      {id:'', src:'assets/libs/opensans-0.1.0.js'},
-      {id:'', src:'assets/libs/easeljs-0.8.0.min.js'},
-      {id:'', src:'assets/libs/creatine-0.2.0.min.js'},
-      {id:'', src:'assets/libs/keymaster-1.6.3.min.js'},
-      {id:'', src:'assets/libs/b3bare.js'},
-
-      // IMG
-      {id:'', src:'assets/img/closedhand.cur'},
-
-      // STYLE
-      {id:'', src:'assets/css/editor.css'},
-      
-      // EDITOR
-      {id:'', src:'editor/data/options.js'},
-      {id:'', src:'editor/data/shortcuts.js'},
-      {id:'', src:'editor/data/theme_dark.js'},
-      {id:'', src:'editor/editor.js'},
-      {id:'', src:'editor/game.js'},
-      {id:'', src:'editor/utils/functions.js'},
-      {id:'', src:'editor/utils/SettingsManager.js'},
-      {id:'', src:'editor/utils/Root.js'},
-      {id:'', src:'editor/utils/Composite.js'},
-      {id:'', src:'editor/utils/Action.js'},
-      {id:'', src:'editor/utils/Module.js'},
-      {id:'', src:'editor/utils/Decorator.js'},
-      {id:'', src:'editor/utils/Organizer.js'},
-      {id:'', src:'editor/utils/StorageProxy.js'},
-      {id:'', src:'editor/utils/storage/LocalStorage.js'},
-      {id:'', src:'editor/draw/shapes.js'},
-      {id:'', src:'editor/draw/symbols.js'},
-      {id:'', src:'editor/models/Project.js'},
-      {id:'', src:'editor/models/Tree.js'},
-      {id:'', src:'editor/models/Node.js'},
-      {id:'', src:'editor/entities/Block.js'},
-      {id:'', src:'editor/entities/Connection.js'},
-      {id:'', src:'editor/entities/SelectionBox.js'},
-      {id:'', src:'editor/systems/CameraSystem.js'},
-      {id:'', src:'editor/systems/ConnectionSystem.js'},
-      {id:'', src:'editor/systems/DragSystem.js'},
-      {id:'', src:'editor/systems/SelectionSystem.js'},
-    ];
-  </script>
+  <link rel="stylesheet" type="text/css" href="assets/css/editor.css">
 </head>
 
 <body>
-
-  <!-- PRELOAD PAGE -->
-  <div id="preloading">
-    <div class="content">
-      <img src="assets/img/loading.gif" alt="Loading"/>
-      <p id="loading-text">
-        Loading, please wait... 
-        <strong><span id="loading-progress">0%</span></strong>
-      </p>
-    </div>
-  </div>
-  <!-- END PRELOAD PAGE -->
-  
   <!-- APP PAGE -->
   <div id="page">
     <canvas id="game-canvas" width="640" height="480" droppable-node></canvas>
