--- a/src/index.html
+++ b/src/index.html
@@ -4,34 +4,15 @@
   <meta charset="UTF-8">
   <title>Behavior3JS Editor</title>
 
-  <script src="assets/js/preloadjs-0.6.0.min.js" type="text/javascript"></script>
   <script src="assets/js/angular-1.3.13.min.js" type="text/javascript"></script>
+  <script src="libs.js" type="text/javascript"></script>
+  <script src="build.js" type="text/javascript"></script>
   <script src="app/build.js" type="text/javascript"></script>
-
-  <script type="text/javascript">
-    var MANIFEST = [
-      {id:'', src:'assets/img/closedhand.cur'},
-      {id:'', src:'build.css'},
-      {id:'', src:'libs.js'},
-      {id:'', src:'build.js'},
-    ];
-  </script>
+  <link rel="stylesheet" type="text/css" href="build.css">
 </head>
 
 <body>
 
-  <!-- PRELOAD PAGE -->
-  <div id="preloading">
-    <div class="content">
-      <img src="assets/img/loading.gif" alt="Loading"/>
-      <p id="loading-text">
-        Loading, please wait... 
-        <strong><span id="loading-progress">0%</span></strong>
-      </p>
-    </div>
-  </div>
-  <!-- END PRELOAD PAGE -->
-  
   <!-- APP PAGE -->
   <div id="page">
     <canvas id="game-canvas" width="640" height="480" droppable-node></canvas>
