--- a/src/dev.html
+++ b/src/dev.html
@@ -40,6 +40,7 @@
   <script src="editor/utils/Module.js" type="text/javascript"></script>
   <script src="editor/utils/Decorator.js" type="text/javascript"></script>
   <script src="editor/utils/Organizer.js" type="text/javascript"></script>
+  <script src="editor/utils/Logger.js" type="text/javascript"></script>
   <script src="editor/draw/shapes.js" type="text/javascript"></script>
   <script src="editor/draw/symbols.js" type="text/javascript"></script>
   <script src="editor/models/Project.js" type="text/javascript"></script>
