Display tree and filename

--- a/src/dev.html
+++ b/src/dev.html
@@ -20,6 +20,7 @@
   <script src="app/common/modal/modal.js" type="text/javascript"></script>
   <script src="app/common/notification/notification.js" type="text/javascript"></script>
   <script src="app/common/scrollable/scrollable.js" type="text/javascript"></script>
+  <script src="app/filename/filename.js" type="text/javascript"></script>
   <script src="app/menu/menu.js" type="text/javascript"></script>
   <script src="app/node/node.js" type="text/javascript"></script>
   <script src="app/node/directives.js" type="text/javascript"></script>
@@ -85,6 +86,7 @@
         <!-- <div ng-show="visible(0)"><helppanel>2</helppanel></div> -->
       </div>
     </sidebar>
+    <filename/>
   </div>
   <!-- END APP PAGE -->
 
