Start making actions undo-able Adding and removing (not cutting) nodes are undo-able commands. Similarly, adding a connection is an undo-able command.

--- a/src/dev.html
+++ b/src/dev.html
@@ -43,6 +43,7 @@
   <script src="editor/utils/Organizer.js" type="text/javascript"></script>
   <script src="editor/utils/Logger.js" type="text/javascript"></script>
   <script src="editor/utils/CustomJson.js" type="text/javascript"></script>
+  <script src="editor/utils/UndoStack.js" type="text/javascript"></script>
   <script src="editor/draw/shapes.js" type="text/javascript"></script>
   <script src="editor/draw/symbols.js" type="text/javascript"></script>
   <script src="editor/models/Project.js" type="text/javascript"></script>
@@ -55,6 +56,10 @@
   <script src="editor/systems/ConnectionSystem.js" type="text/javascript"></script>
   <script src="editor/systems/DragSystem.js" type="text/javascript"></script>
   <script src="editor/systems/SelectionSystem.js" type="text/javascript"></script>
+  
+  <script src="editor/commands/Command.js" type="text/javascript"></script>
+  <script src="editor/commands/treeEditorCommands.js" type="text/javascript"></script>
+  <script src="editor/commands/nodeEditorCommands.js" type="text/javascript"></script>
 
   <link rel="stylesheet" type="text/css" href="assets/css/editor.css">
 </head>
