Code refactoring; undo stack updates * addNode --> makeAndAddNode * Break up makeAndAddNode into makeNode and addNode * addBlock --> makeAndAddBlock * registerBlock --> addBlock * addConnection --> makeAndAddConnection * registerConnection --> addConnection * Some code refactoring to reduce code duplication * AddNode and RemoveNode commands * Removing a node definition now marks all associated tree nodes as unregistered * Adding a node definition marks all associated tree nodes as registered * Undo and redo key binds * Undo / redo modifies the undo stack associated with the widget that is focused at the time of the undoing / redoing (WIP; undoing while focused on the "properties" panel will cause an error) * Make unfocused tint more noticeable

--- a/src/dev.html
+++ b/src/dev.html
@@ -73,11 +73,11 @@
       <menu></menu>
       <!-- I would have just put the canvas into a focusable here, but that causes the tree editor to stop working 
         completely. -->
-      <remote-focusable focus-id="game-canvas">
+      <remote-focusable id="tree-editor" focus-id="game-canvas">
         <!-- Overlay when the editor screen is not focused. -->
         <div class="canvas-overlay"></div>
       </remote-focusable>
-      <focusable>
+      <focusable id="left-panel">
         <sidebar class="left">
           <div class="tabset" ng-controller="TabController">
             <ul class="header">
@@ -91,7 +91,7 @@
         </sidebar>
       </focusable>
 
-      <focusable>
+      <focusable id="right-panel">
         <sidebar class="right">
           <div class="tabset" ng-controller="TabController">
             <ul class="header">
