--- a/src/dev.html
+++ b/src/dev.html
@@ -15,6 +15,7 @@
   <script src="assets/libs/b3bare.js" type="text/javascript"></script>
 
   <script src="app/app.js" type="text/javascript"></script>
+  <script src="app/common/fileinput/fileinput.js" type="text/javascript"></script>
   <script src="app/common/focus/focus.js" type="text/javascript"></script>
   <script src="app/common/sidebar/sidebar.js" type="text/javascript"></script>
   <script src="app/common/tabs/tabs.js" type="text/javascript"></script>
@@ -25,6 +26,7 @@
   <script src="app/menu/menu.js" type="text/javascript"></script>
   <script src="app/node/node.js" type="text/javascript"></script>
   <script src="app/node/directives.js" type="text/javascript"></script>
+  <script src="app/project/project.js" type="text/javascript"></script>
   <script src="app/tree/tree.js" type="text/javascript"></script>
   <script src="app/tree/directives.js" type="text/javascript"></script>
   <script src="app/property/property.js" type="text/javascript"></script>
