--- a/src/dev.html
+++ b/src/dev.html
@@ -106,7 +106,10 @@
           </div>
         </sidebar>
       </focusable>
-      <filename/>
+
+      <focus-editor-linker></focus-editor-linker>
+
+      <filename></filename>
     </div>
     
   </div>
