Rework notification system * Add a ruleset for "warn" level notifications * Make notifications stack on top of each other instead of overlapping. * Limit the number of notifications that can be shown at once, deferring excess notifications into a queue and summarizing them in a single notification if there are still too many.

--- a/src/dev.html
+++ b/src/dev.html
@@ -113,6 +113,12 @@
     </div>
     
   </div>
+
+  <ul id="notification-display">
+    <!-- <li class="notification success">Test Notification</li>
+    <li class="notification success">Test Notification 2</li>
+    <li class="notification success">Test Notification 3</li> -->
+  </ul>
   <!-- END APP PAGE -->
 
   <span ng-controller="NotificationController"></span>
