defaultPath config in save dialog; * make saving a tree suggest a name for the tree in the save GUI * WeavedUndoStack class * Move ListNode into a separate module

--- a/src/dev.html
+++ b/src/dev.html
@@ -41,12 +41,14 @@
   <script src="editor/utils/Root.js" type="text/javascript"></script>
   <script src="editor/utils/Composite.js" type="text/javascript"></script>
   <script src="editor/utils/Action.js" type="text/javascript"></script>
+  <script src="editor/utils/ListNode.js" type="text/javascript"></script>
   <script src="editor/utils/Module.js" type="text/javascript"></script>
   <script src="editor/utils/Decorator.js" type="text/javascript"></script>
   <script src="editor/utils/Organizer.js" type="text/javascript"></script>
   <script src="editor/utils/Logger.js" type="text/javascript"></script>
   <script src="editor/utils/CustomJson.js" type="text/javascript"></script>
   <script src="editor/utils/UndoStack.js" type="text/javascript"></script>
+  <script src="editor/utils/WeavedUndoStack.js" type="text/javascript"></script>
   <script src="editor/draw/shapes.js" type="text/javascript"></script>
   <script src="editor/draw/symbols.js" type="text/javascript"></script>
   <script src="editor/models/Project.js" type="text/javascript"></script>
