--- a/src/dev.html
+++ b/src/dev.html
@@ -49,6 +49,7 @@
   <script src="editor/utils/CustomJson.js" type="text/javascript"></script>
   <script src="editor/utils/UndoStack.js" type="text/javascript"></script>
   <script src="editor/utils/WeavedUndoStack.js" type="text/javascript"></script>
+  <script src="editor/utils/NodeUndoStack.js" type="text/javascript"></script>
   <script src="editor/draw/shapes.js" type="text/javascript"></script>
   <script src="editor/draw/symbols.js" type="text/javascript"></script>
   <script src="editor/models/Project.js" type="text/javascript"></script>
@@ -65,6 +66,7 @@
   <script src="editor/commands/Command.js" type="text/javascript"></script>
   <script src="editor/commands/treeEditorCommands.js" type="text/javascript"></script>
   <script src="editor/commands/nodeEditorCommands.js" type="text/javascript"></script>
+  <script src="editor/commands/ChainCommand.js" type="text/javascript"></script>
 
   <link rel="stylesheet" type="text/css" href="assets/css/editor.css">
 </head>
