Make node lists collapsible

--- a/src/dev.html
+++ b/src/dev.html
@@ -15,6 +15,7 @@
   <script src="assets/libs/b3bare.js" type="text/javascript"></script>
 
   <script src="app/app.js" type="text/javascript"></script>
+  <script src="app/common/collapsibleList/collapsibleList.js" type="text/javascript"></script>
   <script src="app/common/fileinput/fileinput.js" type="text/javascript"></script>
   <script src="app/common/focus/focus.js" type="text/javascript"></script>
   <script src="app/common/sidebar/sidebar.js" type="text/javascript"></script>
