--- a/src/dev.html
+++ b/src/dev.html
@@ -18,6 +18,7 @@
   <script src="app/common/collapsibleList/collapsibleList.js" type="text/javascript"></script>
   <script src="app/common/fileinput/fileinput.js" type="text/javascript"></script>
   <script src="app/common/focus/focus.js" type="text/javascript"></script>
+  <script src="app/common/jsonDisplay/jsonDisplay.js" type="text/javascript"></script>
   <script src="app/common/sidebar/sidebar.js" type="text/javascript"></script>
   <script src="app/common/tabs/tabs.js" type="text/javascript"></script>
   <script src="app/common/modal/modal.js" type="text/javascript"></script>
